--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^4.6.2",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "react-router-dom": "^6.23.1",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
